# solana-anchor-examples

./: .gitignore  Cargo.toml  README.md  package.json  setup_prequisites.ts
base64_transform_example/: README.md
base64_transform_example/client/: base64_transform.idl.ts  base64_transform.instruction.ts  base64_transform.service.ts
base64_transform_example/programs/base64_transform/: Cargo.toml
base64_transform_example/programs/base64_transform/src/: context.rs  error.rs  lib.rs  state.rs
base64_transform_example/tests/: base64_decode.spec.ts  base64_encode.spec.ts  base64_transform.keypair.json
cross_program_invocation_example/: package.json
cross_program_invocation_example/migrations/: deploy.ts
cross_program_invocation_example/programs/cross_program_invocation/: Cargo.toml
cross_program_invocation_example/programs/cross_program_invocation/src/: lib.rs
cross_program_invocation_example/tests/: cross_program_invocation.ts
durable_transaction_example/: README.md
durable_transaction_example/client/: durable_transaction.idl.ts  durable_transaction.service.ts  durable_transaction_instruction.service.ts
durable_transaction_example/programs/durable_transaction/: Cargo.toml
durable_transaction_example/programs/durable_transaction/src/: lib.rs
durable_transaction_example/tests/: durable_transaction.keypair.json  durable_transaction_direct.spec.ts  durable_transaction_indirect.spec.ts
ed25519_verification_example/: README.md
ed25519_verification_example/client/: ed25519_verification.idl.ts  ed25519_verification.service.ts  ed25519_verification_instruction.service.ts
ed25519_verification_example/programs/ed25519_verification/: Cargo.toml
ed25519_verification_example/programs/ed25519_verification/src/: ed25519.rs  lib.rs  spl_ed25519.rs
ed25519_verification_example/services/: ed25519.service.ts  ed25519_instruction.service.ts
ed25519_verification_example/tests/: ed25519.spec.ts  ed25519_instruction.spec.ts  ed25519_usage.spec.ts  ed25519_verification.keypair.json
indirect_transfer_example/: README.md  package.json
indirect_transfer_example/programs/indirect_transfer/: Cargo.toml
indirect_transfer_example/programs/indirect_transfer/src/: lib.rs
indirect_transfer_example/programs/transfer_spl_token/: Cargo.toml
indirect_transfer_example/programs/transfer_spl_token/src/: lib.rs
indirect_transfer_example/tests/: indirect_transfer.ts
program_derived_address_example/: README.md  package.json
program_derived_address_example/programs/program_derived_address/: Cargo.toml
program_derived_address_example/programs/program_derived_address/src/: lib.rs
program_derived_address_example/tests/: program_derived_address.ts
shared_utilities/: anchor.service.ts  buffer-layout.ts  buffer_layout.service.ts  create_test_token.ts  extended_layout.ts  file_system.service.ts  filesystem.service.ts  hash.service.ts  numberu64.ts  primity_helpers.ts  solana.service.ts  solana_config.service.ts  solanaconfig.service.ts  system_program.service.ts  test_account.service.ts  token_program.service.ts  token_program_instruction.service.ts
shared_utilities/solana/: borsh.service.ts  buffer-layout.ts  buffer_layout.service.ts  solana.service.ts  system_program.service.ts  test_account.service.ts  token_program.service.ts  token_program_instruction.service.ts
standalone_spl_token_example/: readme.md
standalone_spl_token_example/client/: standalone_spl_token.idl.ts  standalone_spl_token.service.ts  standalone_spl_token_instruction.service.ts
standalone_spl_token_example/programs/standalone_spl_token/: Cargo.toml
standalone_spl_token_example/programs/standalone_spl_token/src/: anchor_spl.rs  lib.rs  spl_token.rs
standalone_spl_token_example/test/: standalone_spl_token.keypair.json  standalone_spl_token.spec.ts
transfer_spl_token_example/: package.json
transfer_spl_token_example/programs/transfer_spl_token/: Cargo.toml
transfer_spl_token_example/programs/transfer_spl_token/src/: lib.rs
types/buffer-layout/: index.d.ts
