[workspace]
members = [
  "base64_transform_example/programs/*",
  "cross_program_invocation_example/programs/*",
  "durable_transaction_example/programs/*",
  "ed25519_verification_example/programs/*",
  "indirect_transfer_example/programs/*",
  "program_derived_address_example/programs/*",
  "standalone_spl_token_example/programs/*"
]
