[package]
name = "cross-program-invocation"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.24.2"
solana-program = "1.9.14"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "cross_program_invocation"
crate-type = ["cdylib", "lib"]
