[package]
name = "program-derived-address"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2021"
workspace = "../../.."

[lib]
name = "program_derived_address"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "~0.26.0"
solana-program = "~1.14.17"
