[package]
name = "standalone-spl-token"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
num_enum = "0.5.4"
solana-program = "1.9.14"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "standalone_spl_token"
crate-type = ["cdylib", "lib"]
