[package]
name = "standalone-spl-token"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2021"
workspace = "../../.."

[lib]
name = "standalone_spl_token"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "~0.26.0"
arrayref = "~0.3.6"
num_enum = "~0.5.7"
solana-program = "~1.14.17"
